bindings/python/whisper_cpp_wrapper.py


# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 609
if _libs["whisper"].has("whisper_bench_ggml_mul_mat", "cdecl"):
    whisper_bench_ggml_mul_mat = _libs["whisper"].get("whisper_bench_ggml_mul_mat", "cdecl")
    whisper_bench_ggml_mul_mat.argtypes = [c_int]
    whisper_bench_ggml_mul_mat.restype = c_int

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 610
if _libs["whisper"].has("whisper_bench_ggml_mul_mat_str", "cdecl"):
    whisper_bench_ggml_mul_mat_str = _libs["whisper"].get("whisper_bench_ggml_mul_mat_str", "cdecl")
    whisper_bench_ggml_mul_mat_str.argtypes = [c_int]
    whisper_bench_ggml_mul_mat_str.restype = c_char_p

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 614
if _libs["whisper"].has("whisper_log_set", "cdecl"):
    whisper_log_set = _libs["whisper"].get("whisper_log_set", "cdecl")
    whisper_log_set.argtypes = [ggml_log_callback, POINTER(None)]
    whisper_log_set.restype = None

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 15
def WHISPER_DEPRECATED(func, hint):
    return func

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 32
try:
    WHISPER_SAMPLE_RATE = 16000
except:
    pass

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 33
try:
    WHISPER_N_FFT = 400
except:
    pass

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 34
try:
    WHISPER_HOP_LENGTH = 160
except:
    pass

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 35
try:
    WHISPER_CHUNK_SIZE = 30
except:
    pass

whisper_context = struct_whisper_context# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 77

whisper_state = struct_whisper_state# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 78

whisper_full_params = struct_whisper_full_params# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 428

whisper_context_params = struct_whisper_context_params# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 85

whisper_token_data = struct_whisper_token_data# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 104

whisper_model_loader = struct_whisper_model_loader# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 112

whisper_grammar_element = struct_whisper_grammar_element# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 143

# No inserted files

# No prefix-stripping

